--- a/index.html
+++ b/index.html
@@ -4,9 +4,96 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> 
     <title>Document</title>
 </head>
 <body>
-    
+    <section class="menu-bar">
+        <div>
+            <ul>
+                <li>
+                    <a href="">Contact</a>
+                </li>
+                <li>
+                    <a href="">Portfolio</a>
+                </li>
+                <li>
+                    <a href="">Work</a>
+                </li>
+                <li>
+                    <a href="">About</a>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section class="top-part">
+        <div class="half-part">
+            <h1 class="first">HELLO, I AM</h1>
+            <h1 class="heading">HELAL UDDIN BISWAS</h1>
+            <p>A full stack allround designer placent most powerful for develop</p>
+            <a class="link-button" target="_blank" href="https://www.youtube.com/watch?v=1G0tpiX8uF0&list=RDqLoSHKyinaY&index=23">Hire Me</a>
+        </div>
+        <div class="half-part">
+            <img src="images/helal.png" alt="">
+        </div>
+    </section>
+    <section>
+        <div class="half-part">
+            <img src="images/helal.png" alt="">
+        </div>
+        <div class="half-part">
+            <h1 class="about">ABOUT</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged</p>
+            <a class="link-button" target="_blank" href="https://web.programming-hero.com/course/video/restart2-5-2-personal-website-assignment-to-finish-milestone-1-"><i class="fas fa-download"></i>Download Cv</a>
+        </div>
+    </section>
+    <section class="last">
+        <div>
+            <h1 class="text"><span class="span">LASTET</span> WORKING PROJECT</h1>
+        <div class="final-part">
+            <img src="images/image 4.png" alt="">
+            <h1>Power-x-gym(gym website)</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has dummy</p>
+        </div>
+        <div class="final-part">
+            <img src="images/image 5.png" alt="">
+            <h1>Crative Agency</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
+        </div>
+        <div class="final-part">
+            <img src="images/image 8.png" alt="">
+            <h1>Hard Rock Music</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
+        </div>
+        </div>
+        
+    </section>
+    <section class="footer-part">
+        <div class=" footer-img">
+            <div class="banar">
+                <h1 class="text-part">WORK INQUIRY</h1>
+            </div>
+            <div class="ancor-part">
+                <a class="link-button" href="https://www.youtube.com/watch?v=IQhDftCwygo">Lets Chat</a>
+            </div>  
+        </div>
+        <div class="social-media">
+            <h3>STAY CONNECTED</h3>
+            <h4>helacse17@gmail.com</h4>
+        </div>
+        <div class="socil-item">
+            <a href="">
+                <img src="images/image 6.png" alt="">
+            </a>
+            <a href="">
+                <img src="images/Group 33059.png" alt="">
+            </a>
+            <a href="">
+                <img src="images/image 7.png" alt="">
+            </a>
+        </div>
+    </section>
 </body>
 </html>
